--- a/package.json
+++ b/package.json
@@ -19,8 +19,16 @@
   },
   "homepage": "https://github.com/Tuhsarshrivastav/MERN-STACK-Real-World-Shop#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.27.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^6.0.13"
+    "express-fileupload": "^1.2.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.0.13",
+    "nodemailer": "^6.7.2",
+    "stripe": "^8.191.0",
+    "validator": "^13.7.0"
   }
 }
